intel/bench_214_new/extr_.linuxtoolsperfutilsession.c_perf_tool__fill_defaults_with_main/log.txt
bench_214_new/extr_.linuxtoolsperfutilsession.c_perf_tool__fill_defaults_with_main/extr_.linuxtoolsperfutilsession.c_perf_tool__fill_defaults_with_main.c:36:22: error: use of undeclared identifier 'NULL'
        if (tool->sample == NULL)
                            ^
bench_214_new/extr_.linuxtoolsperfutilsession.c_perf_tool__fill_defaults_with_main/extr_.linuxtoolsperfutilsession.c_perf_tool__fill_defaults_with_main.c:37:18: error: assigning to 'int *' from incompatible type 'void *'
                tool->sample = process_event_sample_stub;
                               ^~~~~~~~~~~~~~~~~~~~~~~~~
bench_214_new/extr_.linuxtoolsperfutilsession.c_perf_tool__fill_defaults_with_main/extr_.linuxtoolsperfutilsession.c_perf_tool__fill_defaults_with_main.c:38:20: error: use of undeclared identifier 'NULL'
        if (tool->mmap == NULL)
                          ^
bench_214_new/extr_.linuxtoolsperfutilsession.c_perf_tool__fill_defaults_with_main/extr_.linuxtoolsperfutilsession.c_perf_tool__fill_defaults_with_main.c:39:16: error: assigning to 'int *' from incompatible type 'void *'
                tool->mmap = process_event_stub;
                             ^~~~~~~~~~~~~~~~~~
bench_214_new/extr_.linuxtoolsperfutilsession.c_perf_tool__fill_defaults_with_main/extr_.linuxtoolsperfutilsession.c_perf_tool__fill_defaults_with_main.c:40:21: error: use of undeclared identifier 'NULL'
        if (tool->mmap2 == NULL)
                           ^
bench_214_new/extr_.linuxtoolsperfutilsession.c_perf_tool__fill_defaults_with_main/extr_.linuxtoolsperfutilsession.c_perf_tool__fill_defaults_with_main.c:41:17: error: assigning to 'int *' from incompatible type 'void *'
                tool->mmap2 = process_event_stub;
                              ^~~~~~~~~~~~~~~~~~
bench_214_new/extr_.linuxtoolsperfutilsession.c_perf_tool__fill_defaults_with_main/extr_.linuxtoolsperfutilsession.c_perf_tool__fill_defaults_with_main.c:42:20: error: use of undeclared identifier 'NULL'
        if (tool->comm == NULL)
                          ^
bench_214_new/extr_.linuxtoolsperfutilsession.c_perf_tool__fill_defaults_with_main/extr_.linuxtoolsperfutilsession.c_perf_tool__fill_defaults_with_main.c:43:16: error: assigning to 'int *' from incompatible type 'void *'
                tool->comm = process_event_stub;
                             ^~~~~~~~~~~~~~~~~~
bench_214_new/extr_.linuxtoolsperfutilsession.c_perf_tool__fill_defaults_with_main/extr_.linuxtoolsperfutilsession.c_perf_tool__fill_defaults_with_main.c:44:26: error: use of undeclared identifier 'NULL'
        if (tool->namespaces == NULL)
                                ^
bench_214_new/extr_.linuxtoolsperfutilsession.c_perf_tool__fill_defaults_with_main/extr_.linuxtoolsperfutilsession.c_perf_tool__fill_defaults_with_main.c:45:22: error: assigning to 'int *' from incompatible type 'void *'
                tool->namespaces = process_event_stub;
                                   ^~~~~~~~~~~~~~~~~~
bench_214_new/extr_.linuxtoolsperfutilsession.c_perf_tool__fill_defaults_with_main/extr_.linuxtoolsperfutilsession.c_perf_tool__fill_defaults_with_main.c:46:20: error: use of undeclared identifier 'NULL'
        if (tool->fork == NULL)
                          ^
bench_214_new/extr_.linuxtoolsperfutilsession.c_perf_tool__fill_defaults_with_main/extr_.linuxtoolsperfutilsession.c_perf_tool__fill_defaults_with_main.c:47:16: error: assigning to 'int *' from incompatible type 'void *'
                tool->fork = process_event_stub;
                             ^~~~~~~~~~~~~~~~~~
bench_214_new/extr_.linuxtoolsperfutilsession.c_perf_tool__fill_defaults_with_main/extr_.linuxtoolsperfutilsession.c_perf_tool__fill_defaults_with_main.c:48:20: error: use of undeclared identifier 'NULL'
        if (tool->exit == NULL)
                          ^
bench_214_new/extr_.linuxtoolsperfutilsession.c_perf_tool__fill_defaults_with_main/extr_.linuxtoolsperfutilsession.c_perf_tool__fill_defaults_with_main.c:49:16: error: assigning to 'int *' from incompatible type 'void *'
                tool->exit = process_event_stub;
                             ^~~~~~~~~~~~~~~~~~
bench_214_new/extr_.linuxtoolsperfutilsession.c_perf_tool__fill_defaults_with_main/extr_.linuxtoolsperfutilsession.c_perf_tool__fill_defaults_with_main.c:50:20: error: use of undeclared identifier 'NULL'
        if (tool->lost == NULL)
                          ^
bench_214_new/extr_.linuxtoolsperfutilsession.c_perf_tool__fill_defaults_with_main/extr_.linuxtoolsperfutilsession.c_perf_tool__fill_defaults_with_main.c:52:28: error: use of undeclared identifier 'NULL'
        if (tool->lost_samples == NULL)
                                  ^
bench_214_new/extr_.linuxtoolsperfutilsession.c_perf_tool__fill_defaults_with_main/extr_.linuxtoolsperfutilsession.c_perf_tool__fill_defaults_with_main.c:54:19: error: use of undeclared identifier 'NULL'
        if (tool->aux == NULL)
                         ^
bench_214_new/extr_.linuxtoolsperfutilsession.c_perf_tool__fill_defaults_with_main/extr_.linuxtoolsperfutilsession.c_perf_tool__fill_defaults_with_main.c:56:28: error: use of undeclared identifier 'NULL'
        if (tool->itrace_start == NULL)
                                  ^
bench_214_new/extr_.linuxtoolsperfutilsession.c_perf_tool__fill_defaults_with_main/extr_.linuxtoolsperfutilsession.c_perf_tool__fill_defaults_with_main.c:58:30: error: use of undeclared identifier 'NULL'
        if (tool->context_switch == NULL)
                                    ^
fatal error: too many errors emitted, stopping now [-ferror-limit=]
20 errors generated.
HLS FPGA Parse FAILED.
